--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -11,3 +11,5 @@ jobs:
     steps: 
     - name: mxcl/Xcodebuild
       uses: mxcl/xcodebuild@v2.0.0
+      with:
+        working-directory: BoldlyGiffing
