--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -12,4 +12,4 @@ jobs:
     - name: mxcl/Xcodebuild
       uses: mxcl/xcodebuild@v2.0.0
       with:
-        working-directory: BoldlyGiffing
+        working-directory: ...
