--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -11,3 +11,5 @@ jobs:
     steps: 
     - name: Xcodebuild Action
       uses: sersoft-gmbh/xcodebuild-action@v2.0.1
+      with: 
+        project: BoldlyGiffing.xcodeproj
