--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -12,4 +12,6 @@ jobs:
        uses: actions/checkout@v3
      - name: xcodeBuild
        uses: mxcl/xcodebuild@v2.0.0
+       with:
+         scheme: BoldlyGiffingiOS
       
