--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -13,4 +13,6 @@ jobs:
      - name: xcodeBuild
        uses: mxcl/xcodebuild@v2.0.0
        with:
-         scheme: BoldlyGiffingiOS      
+         scheme: BoldlyGiffingiOS
+         platform: iOS Simulator
+  
