--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -14,5 +14,5 @@ jobs:
        uses: mxcl/xcodebuild@v2.0.0
        with:
          scheme: BoldlyGiffingiOS
-         platform: iOS Simulator
+         platform: iOS
   
