--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -10,9 +10,7 @@ jobs:
     steps: 
      - name: Checkout
        uses: actions/checkout@v3
-     - name: xcodeBuild
-       uses: mxcl/xcodebuild@v2.0.0
+     - name: Xcodebuild Action
+       uses: sersoft-gmbh/xcodebuild-action@v2.1.0
        with:
-         scheme: BoldlyGiffingiOS
-         platform: iOS
-  
+         scheme: BoldlyGiffingiOS  
