--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -13,4 +13,5 @@ jobs:
      - name: Xcodebuild Action
        uses: sersoft-gmbh/xcodebuild-action@v2.1.0
        with:
+         project: BoldlyGiffing.xcodeproj
          scheme: BoldlyGiffingiOS  
