--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -14,4 +14,6 @@ jobs:
        uses: sersoft-gmbh/xcodebuild-action@v2.1.0
        with:
          project: BoldlyGiffing.xcodeproj
-         scheme: BoldlyGiffingiOS  
+         scheme: BoldlyGiffingiOS
+         destination: platform=iOS
+         action: test
