--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -10,10 +10,9 @@ jobs:
     steps: 
      - name: Checkout
        uses: actions/checkout@v3
-     - name: Xcodebuild Action
-       uses: sersoft-gmbh/xcodebuild-action@v2.1.0
+     - name: xcodeBuild
+       uses: mxcl/xcodebuild@v2.0.0
        with:
-         project: BoldlyGiffing.xcodeproj
          scheme: BoldlyGiffingiOS
-         destination: platform=iOS
-         action: test
+         xcode: 14.3
+         platform: iOS
