--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   bulid:
-    runs-on: macos-latest
+    runs-on: macos-13.5
     steps: 
      - name: Checkout
        uses: actions/checkout@v3
